@@ -10,7 +10,7 @@ asasm_CFLAGS = -D_GNU_SOURCE -std=c99 \
 	-DGCCSDK_REVISION=\"$(shell svnversion -n ${srcdir} /trunk/gcc4/riscos/asasm)\"
 asasm_LDFLAGS = -lm
 asasm_SOURCES=area.c asm.c code.c commands.c decode.c depend.c error.c \
-	eval.c expr.c filestack.c fix.c get.c help_cop.c help_cpu.c \
+	eval.c expr.c filestack.c fix.c frame.c get.c help_cop.c help_cpu.c \
 	include.c input.c lexAcorn.c lex.c lit.c \
 	local.c macros.c main.c m_cop.c m_copmem.c m_cpu.c m_cpuctrl.c \
 	m_cpumem.c m_fpe.c option.c output.c put.c reloc.c \
